<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_accumulator_msgs</name>
  <version>0.0.0</version>
  <description>The pointcloud_accumulator_msgs package</description>

  <maintainer email="jaspersuess@googlemail.com">jasper</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
